# Lyrico

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
.github/workflows/: build-builtin-v7.yml  deploy-docs.yml  sync-upstream-and-build.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/en-US/guide/: single-song.md
docs/en-US/guide/settings/: search.md
docs/en-US/plugins/: examples.md  host-api.md  index.md  manifest.md  overview.md
docs/guide/: single-song.md
docs/guide/settings/: search.md
docs/plugins/: composition.md  config-metadata.md  debugging.md  examples.md  host-api.md  index.md  manifest.md  overview.md  plugin-functions.md  using.md
fastlane/meta/android/en-US/: full_description.txt  short_description.txt
fastlane/meta/android/zh-CN/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
lyrico-app/: build.gradle.kts
lyrico-app/schemas/com.lonx.lyrico.data.LyricoDatabase/: 10.json  12.json  13.json  16.json  17.json
lyrico-app/src/main/: AndroidManifest.xml
lyrico-app/src/main/cpp/: CMakeLists.txt  ebur128.cpp  quickjs_bridge.cpp
lyrico-app/src/main/java/com/lonx/lyrico/: App.kt  LyricoApp.kt  MainActivity.kt
lyrico-app/src/main/java/com/lonx/lyrico/data/: LyricoDatabase.kt  SharedSelectionManager.kt
lyrico-app/src/main/java/com/lonx/lyrico/di/: AppModule.kt
lyrico-app/src/main/java/com/lonx/lyrico/domain/: SearchSourceConfigApplier.kt
lyrico-app/src/main/java/com/lonx/lyrico/screens/: AboutScreen.kt  AlbumDetailScreen.kt  AppLogScreen.kt  ArtistDetailScreen.kt  ArtistSplitSettingsScreen.kt  BatchEditScreen.kt  BatchRenameScreen.kt  BatchTaskDetailScreen.kt  BatchTaskListScreen.kt  CharacterMappingScreen.kt  EditMetadataScreen.kt  (+15 more)
lyrico-app/src/main/res/values/: strings.xml
lyrico-app/src/main/res/values-zh-rCN/: strings.xml
lyrico-audiotag/: build.gradle.kts
lyrico-audiotag/src/main/cpp/: utils.h
tools/plugin-devkit/: README.md  package.json
tools/plugin-devkit/src/: cli.js  fs-utils.js  host-api.js  manifest.js  plugin-loader.js  report.js  result-parser.js  runtime.js  spec.js  zip.js
(+159 files in other folders)
